Quark changes that have been sitting in my commit stuff for a while. Fixes some reported/unreported bugs
- Add some additional fixes to sorting to make it more consistent
- Fix a bug relating to sorting not showing on held shulker boxes
- Add some changes for our unused api because might as well make it kinda useful even if no one touches it
- Add some variance to the fairy rings
- Add some fallback code for AttributeTooltips.
- Minor additional changes

Signed-off-by: Siuolplex <lmeitrodt@gmail.com>